--- a/internal/ui/templates/index.html
+++ b/internal/ui/templates/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Go + HTMX</title>
-    <script src="/static/scripts/htmx.min.js"></script>
+    <script src="/static/js/htmx.min.js"></script>
     <link rel="stylesheet" href="/static/css/index-style.css">
     <link rel="stylesheet" href="/static/css/style.css">
 
